# njudge

./: .gitignore  AUTHORS  BUGS  CHANGES  COPYING  ChangeLog  Changelog  INSTALL  Makefile  Makefile.am  Makefile.defines.base  Makefile.in  Makefile.version  NEWS  README  README.JudgeKeeper  README.duplex  README.first-install  README.fixids  README.flags  README.flist  README.gotchas  README.ignore  README.makefile  README.master  README.resign  README.syslog  README.timewarp  acconfig.h  aclocal.m4  ascii2rec.c  ascii_to_ded.c  assign.c  atrun  atrun.linux  bailout.c  bgreet.c  bgreet.old  cmap.c  common.c  (+127 more)
data/: HOFpointer  absence  asia.asc  concessions  convoys  countries.x  deadlines  dedsystems  denyallow  draws  duality  ep.house.rules  files3  files4  flist  form  ftpbymail  guide  history  hofpointer  house.rules  how2gm  index  info  info.a-f  info.aberration  info.african2  info.ancient_med  info.asia  info.blind  info.britain  info.chaos  info.chromatic  info.classical  info.colonial  info.colonial96  info.crowded  info.crowded_1898  info.dipmach  info.dipmach1  (+225 more)
data/CVS/: Entries  Repository
debian/: README.debian  bug  changelog  conffiles  control  copyright  cron.weekly  newlogs  postinst  postrm  rules
debian/CVS/: Entries  Repository
docs/: AUTHORS  CHANGES  HowToFloc.html  INSTALL  InstallationHOWTO  InstallationHOWTO.html  InstallationHOWTO.txt  LICENSE  Map-HowTo-Njudge.html  README  README.bailout  README.denyallow  README.hackers  README.keepers  README.magic  README.master  README.plyrdata  README.resign  README.size  README.statistics  README.syslog  README.timewarp  README.timezone  TODO  VariantsHOWTO.html  VariantsHOWTO.txt  index.lyx  installation.txt  mail_format.html  manual-all.htm  njudge-compile-farm.html  njudge-dev.txt  njudge-work-guide.html  njudge-work-guide.sxw  njudgeMapFileHOWTO.htm  njudgeMapFileHOWTO.txt  njudgemapdatahowto.htm  njudgemapdatahowto.txt
docs/archives/: README.duplex  README.first-install  README.old  log
docs/mapit-howto/: Maharajah1.cmap.ps  Maharajah1.info  epsembed.txt  maha1.eps  maharajah.results  orig.Maharajah1.cmap.ps  orig.Maharajah1.info
resources/: njudge_db.sql  tidy_gamedirs.sh
resources/tools/: Makefile  dump_plyrdata.c  dump_to_sql.c  migrate_db.c
tests/: Makefile  njudge-test.sh  smail-test  test  test_conf.c  test_datetime.c  test_main.c  test_main.h  test_user.c
tests/baseline/: A-Reg01.out  A-Reg02.out  A-Reg03.out  A-Reg04.dip-master  A-Reg04.out  A-Reg05.out  A-Reg06.out  A-Reg07.out  A-Reg08.out  A-Reg09.out  A-Reg10.out  A-RegM-1.out  A-RegM-2.out  Bug91-01.dip-master  Bug91-01.out  Bug91-02.dip-master  Bug91-02.out  Bug91-03.dip-master  Bug91-03.out  Bug91-04.dip-master  Bug91-04.out  Bug91-05.dip-master  Bug91-05.out  Bug91-06.dip-master  Bug91-06.out  Bug91-07.dip-master  Bug91-07.out  Bug91-08.out  Bug91-09.out  Bug91-10.out  Bug91-11.dip-master  Bug91-11.out  Bug91-12.out  Bug91-13.dip-master  Bug91-13.out  Bug91-14.dip-master  Bug91-14.out  Bug91-15.dip-master  Bug91-16.dip-master  Bug91-16.out  (+2 more)
tests/input/: A-Reg01.in  A-Reg01.txt  A-Reg02.in  A-Reg02.txt  A-Reg03.in  A-Reg03.txt  A-Reg04.in  A-Reg04.txt  A-Reg05.in  A-Reg05.txt  A-Reg06.in  A-Reg06.txt  A-Reg07.in  A-Reg07.txt  A-Reg08.in  A-Reg08.txt  A-Reg09.in  A-Reg09.txt  A-Reg10.in  A-Reg10.txt  A-RegM-1.in  A-RegM-1.txt  A-RegM-2.in  A-RegM-2.txt  Bug91-01.in  Bug91-01.txt  Bug91-02.in  Bug91-02.txt  Bug91-03.in  Bug91-03.txt  Bug91-04.in  Bug91-04.txt  Bug91-05.in  Bug91-05.txt  Bug91-06.in  Bug91-06.txt  Bug91-07.in  Bug91-07.txt  Bug91-08.in  Bug91-08.txt  (+16 more)
tests/test_data/: fail_parse.cfg  test_ok.cfg
